--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -82,11 +82,11 @@ header .container {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  flex-direction: column;
 }
 
 header nav {
   display: flex;
-  padding: 5px 20px;
 }
 
 header nav a {
@@ -101,12 +101,18 @@ header a:hover {
 }
 
 header .logo {
-  padding: 5px 20px;
   margin: 0;
+  font-weight: bold;
 }
 
 header img {
   height: 40px;
+}
+
+header img:hover {
+  height: 40px;
+  background-image: linear-gradient(60deg, #081b29 0%, #081b2976 100%);
+
 }
 
 header img:hover {
@@ -272,7 +278,7 @@ header img:hover {
   box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.396);
   padding: 10px;
   border-radius: 20px;
-  width: 200px;
+  width: 300px;
   background-image: linear-gradient(60deg, #081b29 0%, #081b2900 100%);
 }
 
